--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "@ejiroghene/forms",
   "version": "1.0.0",
-  "description": "",
-  "main": "lib/index.js",
+  "description": "utility of Forms and Inputs ",
+  "main": "src/index.ts",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["src/**/*"],
   "scripts": {
     "prepublish": "tsc"
   },
